Fixed icon-link underline still being visible on hober

--- a/uil/core/static/uil.core/css/fonts.css
+++ b/uil/core/static/uil.core/css/fonts.css
@@ -76,3 +76,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-decoration: none;
 }
+
+[class^="icon-"]:hover, [class*=" icon-"]:hover {
+    text-decoration: none;
+}
